[gd_scene load_steps=6 format=3 uid="uid://bxj3xyumiyhrb"]

[ext_resource type="Script" path="res://tilemap/poisoned_water_tile.gd" id="1_ojis2"]
[ext_resource type="Texture2D" uid="uid://u04e8ynal2qu" path="res://assets/sprites/Tilesets/DirtyWater1.png" id="2_nqxbu"]
[ext_resource type="Texture2D" uid="uid://dt34vdnajx2ga" path="res://assets/sprites/Tilesets/Frame.png" id="3_4tsju"]
[ext_resource type="AudioStream" uid="uid://btyv0i1ttptc3" path="res://assets/sounds/plant.wav" id="7_7ms8m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7e8t7"]
size = Vector2(64, 64)

[node name="PoisonedWater" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_ojis2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7e8t7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_nqxbu")

[node name="Frame" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 1, 0.4, 1)
position = Vector2(-1.90735e-06, -1.90735e-06)
scale = Vector2(4, 4)
texture = ExtResource("3_4tsju")

[node name="PlantSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_7ms8m")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
